<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart weeks</string>
    <string name="action_settings">Settings</string>
    <string name="my_plans">Weekly planning for&#8230;</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_plan">New planning</string>
    <string name="edit_plan">Edit planning</string>
    <string name="scheduler_added">Planning has been added successfully</string>
    <string name="scheduler_modified">Planning has been modified successfully</string>
    <string name="scheduler_deleted">Planning has been deleted successfully</string>
    <string name="scheduler_picture">My picture</string>
    <string name="edit_scheduler">Edit planning</string>
    <string name="delete_scheduler">Delete planning</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="top_date">date</string>
	<string name="from_camera">Take from camera</string>
	<string name="from_gallery">Select from gallery</string>
	<string name="select_image">Change image</string>
	<string name="select_image_button">Change image&#8230;</string>
	<string name="complete_action">Complete action using</string>
	<string name="not_image_crop_app">Can not find image crop app</string>
	<string name="choose_crop_app">Choose crop app</string>
	<string name="confirm_delete">Confirm delete&#8230;</string>
	<string name="confirm_delete_question">Are you sure you want delete this planing?</string>
	<string name="pref_show_splash">Show splash screen on startup</string>
	<string name="pref_show_splash_resp">Yes/No (only first time)</string>
	<string name="pref_start_week">Start week on sunday.</string>
	<string name="pref_start_week_resp">Yes/No</string>
	<string name="pref_choose_language">Choose language</string>
	<string name="pref_choose_language_info">Choose the language for application.</string>
	<string name="pref_about_title">About the author&#8230;</string>
	<string name="pref_about_summary">Copyright 2013 Iker Canarias</string>
	<string name="pref_info">Information</string>
	<string name="pref_license_title">License</string>
	<string name="pref_license">This application is licensed under GNU GENERAL PUBLIC LICENSE (GPL v3). More info in https://code.google.com/p/week-scheduler/</string>
	<string name="pref_dialog_title">Application developer</string>
	<string name="pref_default_language">Default language</string>
	<string name="pref_new_task">New task</string>
	<string name="pref_delete_task">Delete task</string>
	<string name="pref_task_title">Tasks</string>
	<string name="pref_task_management_title">Tasks management</string>
	<string name="pref_task_management">Manage your own tasks. Delete or add new tasks for your weekly planings.</string>
	<string name="pref_task_management_no_tasks">No tasks</string>
	<string name="pref_task_restore_title">Restore tasks</string>
	<string name="pref_task_restore">Remove current task and restore default task.</string>
	<string name="pref_task_restoring">Restoring tasks</string>
	<string name="pref_task_restored">Tasks successfully restored</string>
	<string name="pref_task_restore_confirm">Do you want delete all current tasks and restore default tasks?</string>
	<string name="pref_task_import_title">Import tasks</string>
	<string name="pref_task_import">Import tasks from external file.</string>
	<string name="pref_task_import_confirm">Do you want import current tasks? This operation will remove all current images and tasks associated.</string>
	<string name="pref_task_imported">Tasks successfully imported.</string>
	<string name="pref_task_importing">Importing tasks</string>
	<string name="pref_task_export_title">Export tasks</string>
	<string name="pref_task_export">Export tasks to external file.</string>
	<string name="pref_task_export_confirm">Do you want export all current tasks?</string>
	<string name="pref_task_exported">Tasks successfully exported to \'smart_weeks_backup.db\' file.</string>
	<string name="pref_task_exporting">Exporting tasks</string>
	<string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_no_sdcard_found">No SD card found, please insert an SD card.</string>
    <string name="msg_error_importing_database">General error importing data base.</string>
    <string name="msg_error_exporting_database">General error exporting data base.</string>
    
	<string name="instructions">Press and hold to drag an image.</string>
	
    <!-- Drag Drop -->
    <integer name="num_images">21</integer>
    <integer name="num_columns">7</integer>
    
</resources>